--- a/CoinThrow/project.properties
+++ b/CoinThrow/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-15
-android.library.reference.1=../../../Users/shiroiwa/git/AndEngine
+android.library.reference.1=../../AndEngine
